# mindbox-backend

./: Dockerfile  Makefile  README.MD  docker-compose.yml  dump.sql  pyproject.toml
app/: __main__.py  main.py
app/config/: config.py  utils.py
app/db/: alembic.ini
app/db/connection/: session.py
app/db/migrator/: env.py
app/db/models/: item.py
app/endpoints/: __init__.py  item.py
mindbox_backend/: __main__.py
mindbox_backend/config/: config.py  utils.py
mindbox_backend/db/: __init__.py
mindbox_backend/db/connection/: session.py
mindbox_backend/db/migrator/: env.py
mindbox_backend/db/migrator/versions/: 0f4c05785cc5_.py  58307d4da0df_.py  6c7cac6ba33d_.py  944778bc5ad6_.py  9f3467abbb3a_.py
mindbox_backend/db/models/: __init__.py  category.py  item.py  item_category.py
mindbox_backend/endpoints/: __init__.py  category.py  item.py  item_category.py
mindbox_backend/schemas/: __init__.py  category.py  item.py  item_category.py
mindbox_backend/utils/: category.py  item.py  item_category.py
tests/: conftest.py  utils.py
tests/api/: test_item_category.py
tests/utils/: test_category.py  test_item.py
