[tool.poetry]
name = "mindbox_backend"
version = "0.1.0"
description = ""
authors = ["nikita <misharinnikita@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.44"
alembic = "^1.8.1"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
